--- a/lab1_set_covering_a_start/lab1.ipynb
+++ b/lab1_set_covering_a_start/lab1.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 15,
       "metadata": {
         "id": "sCCwbjuwvWZd"
       },
@@ -12,12 +12,14 @@
         "from random import random\n",
         "from functools import reduce\n",
         "from collections import namedtuple\n",
-        "from queue import PriorityQueue\n"
+        "from queue import PriorityQueue\n",
+        "\n",
+        "from tqdm import tqdm\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 16,
       "metadata": {
         "id": "HrD3qip0vWZg"
       },
@@ -25,7 +27,7 @@
       "source": [
         "# constants\n",
         "PROBLEM_SIZE = 5  # dimension of the finite set U\n",
-        "NUMBER_SET = 10  # number of subsets in the collection S\n",
+        "NUMBER_SET = 20  # number of subsets in the collection S\n",
         "SETS = tuple(\n",
         "    np.array([random() < 0.3 for i in range(PROBLEM_SIZE)]) for j in range(NUMBER_SET)\n",
         ")  # generate sets in S\n",
@@ -36,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 17,
       "metadata": {
         "id": "4MiWodfNvWZh"
       },
@@ -59,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 18,
       "metadata": {
         "id": "rkXFnwICvWZj"
       },
@@ -76,20 +78,23 @@
         "id": "gt8hk1qBvWZk"
       },
       "source": [
-        "Commonly used Heuristic for set covering:\n",
+        "#### Commonly used Heuristic for set covering:\n",
         "\n",
-        "- Minimum Remaining Elements (MRE): Prioritizes subsets with the fewest uncovered elements.\n",
+        "- **Minimum Remaining Elements (MRE)**: This heuristic estimates the number of elements that are not yet covered by any selected subset. It encourages selecting subsets that cover the fewest remaining uncovered elements, which is consistent with minimizing the actual cost. Therefore, it is admissible.\n",
         "\n",
-        "- Maximum Coverage (MC): Favors subsets that cover the maximum number of uncovered elements.\n",
+        "- **Maximum Coverage (MC)**:  This heuristic estimates the number of currently uncovered elements and prioritizes selecting subsets that contribute to covering the largest number of these elements. It also encourages minimizing the actual cost, making it admissible. *The Greedy Heuristic is essentially the same as the MC. Both heuristics prioritize selecting subsets that cover the largest number of currently uncovered elements.*\n",
         "\n",
-        "- Combination of MRE and MC: Balances between subsets with few remaining elements and high coverage.\n",
+        "- **Combination of MRE and MC**:  A combination of admissible heuristics remains admissible. If both MRE and MC individually are admissible, their combination (e.g., taking the average) is still admissible.\n",
         "\n",
-        "- Randomized Heuristics: Selects subsets randomly or based on probabilistic considerations to explore different paths.\n"
+        "- **Randomized Heuristics**: A random heuristic does not guarantee admissibility. It may overestimate or underestimate the true cost. *It is not guaranteed to be admissible*, but its fun.\n",
+        "\n",
+        "- **All or None Heuristic**: This heuristic checks first for notable sets (ones that cover all or none of the remaining elements) and assigns them corresponding priority. If no such sets exist, it uses the MRE heuristic. This heuristic is admissible.\n",
+        " "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 19,
       "metadata": {
         "id": "GnsoumyPvWZm"
       },
@@ -113,65 +118,80 @@
         "\n",
         "\n",
         "def MRE_heuristic(state, sets):\n",
-        "    \"\"\"\n",
-        "    - Objective: The MRE heuristic prioritizes selecting subsets that have the\n",
-        "      fewest remaining uncovered elements.\n",
-        "    - Selection Criterion: It selects subsets that cover elements that are closest\n",
-        "    to being fully covered. In other words, it aims to quickly cover the remaining\n",
-        "    elements.\n",
-        "    - Impact: The primary goal is to minimize the number of remaining uncovered\n",
-        "    elements\n",
-        "    \"\"\"\n",
+        "    # Calculate the uncovered elements by taking the logical OR of selected subsets\n",
         "    uncovered = reduce(\n",
-        "        np.logical_or, [sets[i] for i in state.taken], np.zeros(PROBLEM_SIZE)\n",
+        "        np.logical_or, [sets[i] for i in state.taken], np.zeros(len(sets[0]))\n",
         "    )\n",
         "\n",
+        "    # Estimate the remaining cost by counting the number of uncovered elements\n",
         "    heuristic = -np.sum(np.logical_not(uncovered))\n",
+        "\n",
         "    return heuristic\n",
         "\n",
         "\n",
         "def MC_heuristic(state, sets):\n",
-        "    \"\"\"\n",
-        "    - Objective: The MC heuristic prioritizes selecting subsets that cover the\n",
-        "    maximum number of currently uncovered elements.\n",
-        "    - Selection Criterion: It\n",
-        "    selects subsets that contribute to covering the largest number of currently\n",
-        "    uncovered elements.\n",
-        "    - Impact: The primary goal is to maximize the coverage\n",
-        "    with each selection\n",
-        "    \"\"\"\n",
+        "    # Calculate the uncovered elements by taking the logical OR of selected subsets\n",
         "    uncovered = reduce(\n",
-        "        np.logical_or, [sets[i] for i in state.taken], np.zeros(PROBLEM_SIZE)\n",
+        "        np.logical_or, [sets[i] for i in state.taken], np.zeros(len(sets[0]))\n",
         "    )\n",
         "\n",
-        "    heuristic = -np.sum(uncovered)\n",
+        "    # Sort the subsets by how many uncovered elements they cover (in descending order)\n",
+        "    subsets_by_coverage = sorted(\n",
+        "        range(len(sets)), key=lambda i: -np.sum(sets[i] & np.logical_not(uncovered))\n",
+        "    )\n",
+        "\n",
+        "    # Initialize the heuristic value\n",
+        "    heuristic = 0\n",
+        "    covered_elements = np.copy(uncovered)\n",
+        "\n",
+        "    # Iterate through subsets sorted by coverage and count their contribution\n",
+        "    for subset_index in subsets_by_coverage:\n",
+        "        subset = sets[subset_index]\n",
+        "        contribution = subset & np.logical_not(covered_elements)\n",
+        "        heuristic += 1  # Increment the cost\n",
+        "        covered_elements = np.logical_or(covered_elements, contribution)\n",
+        "\n",
+        "        if np.all(covered_elements):\n",
+        "            break  # All elements are covered\n",
+        "\n",
         "    return heuristic\n",
         "\n",
         "\n",
         "def MRE_MC_heuristic(state, sets):\n",
-        "    \"\"\"\n",
-        "    Prioritize with a balanced approach between MRE and MC\n",
-        "    \"\"\"\n",
         "    return (MRE_heuristic(state, sets) + MC_heuristic(state, sets)) / 2\n",
         "\n",
         "\n",
         "def RANDOM_heuristic(state, sets):\n",
-        "    \"\"\"\n",
-        "    Prioritize with a random heuristic\n",
-        "    \"\"\"\n",
         "    return random()\n",
         "\n",
         "\n",
-        "def COSTONLY_heuristic(state, sets):\n",
-        "    \"\"\"\n",
-        "    Prioritize only with cost\n",
-        "    \"\"\"\n",
-        "    return cost(state)\n"
+        "def ALLorNONE_heuristic(state, sets):\n",
+        "    # Calculate the uncovered elements by taking the logical OR of selected subsets\n",
+        "    uncovered = reduce(np.logical_or, [sets[i] for i in state.taken], np.zeros(len(sets[0])))\n",
+        "\n",
+        "    # Check if there exist a set with all true \n",
+        "    all_true_covered = np.any(np.all(np.logical_and(sets, np.logical_not(uncovered)), axis=1))\n",
+        "\n",
+        "    # Check if there exist a set with all false\n",
+        "    all_false_covered = np.any(np.all(np.logical_and(np.logical_not(sets), np.logical_not(uncovered)), axis=1))\n",
+        "\n",
+        "\n",
+        "    # Determine the heuristic value based on the conditions\n",
+        "    if all_true_covered:\n",
+        "        heuristic = 0  # Highest priority (goal state already reached)\n",
+        "    elif all_false_covered:\n",
+        "        heuristic = float('inf')  # Lowest priority (impossible to reach the goal state)\n",
+        "    else:\n",
+        "        # Calculate the remaining cost as in the MRE heuristic\n",
+        "        heuristic = -np.sum(np.logical_not(uncovered))\n",
+        "\n",
+        "    return heuristic\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 20,
       "metadata": {
         "id": "_34iHwB3vWZo"
       },
@@ -192,14 +212,19 @@
         "\n",
         "    checked_states = 0\n",
         "\n",
+        "    progress_bar = tqdm(total=None)\n",
+        "\n",
         "    while not open_set.empty():\n",
         "        # Get the state with the lowest f score from the priority queue\n",
         "        _, current_state = open_set.get()\n",
         "\n",
         "        checked_states += 1\n",
         "\n",
+        "        progress_bar.update(1)\n",
+        "\n",
         "        # If the current state is a goal state, return the solution\n",
         "        if goal_check(current_state, sets):\n",
+        "            progress_bar.close()\n",
         "            return current_state.taken, checked_states\n",
         "\n",
         "        # Add the current state to the closed set\n",
@@ -219,12 +244,13 @@
         "                    open_set.put((new_state.cost + new_state.heuristic, new_state))\n",
         "\n",
         "    # If the open set is empty and no solution is found, return None\n",
+        "    progress_bar.close()\n",
         "    return None\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -237,149 +263,151 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Set 0 [False False False  True  True] Coverage: 2\n",
-            "Set 1 [False  True False False False] Coverage: 1\n",
-            "Set 2 [False False  True False False] Coverage: 1\n",
-            "Set 3 [False False False False False] Coverage: 0\n",
-            "Set 4 [False  True False False False] Coverage: 1\n",
-            "Set 5 [False False  True  True False] Coverage: 2\n",
-            "Set 6 [False False False False False] Coverage: 0\n",
-            "Set 7 [False False False  True  True] Coverage: 2\n",
-            "Set 8 [False False False False False] Coverage: 0\n",
-            "Set 9 [ True  True False  True  True] Coverage: 4\n",
             "\n",
-            "MRE: ([2, 9], 2048)\n",
-            "MC: ([9, 2], 3)\n",
-            "MRE+MC: ([2, 9], 38)\n",
-            "RANDOM: ([2, 9], 16)\n",
-            "COSTONLY: ([2, 9], 38)\n"
+            "MRE\n"
           ]
-        }
-      ],
-      "source": [
-        "for i in range(NUMBER_SET):\n",
-        "    print(\"Set\", i, SETS[i], \"Coverage:\", np.sum(SETS[i]))\n",
-        "\n",
-        "print()\n",
-        "print(\"MRE:\", astar(SETS, MRE_heuristic))\n",
-        "print(\"MC:\", astar(SETS, MC_heuristic))\n",
-        "print(\"MRE+MC:\", astar(SETS, MRE_MC_heuristic))\n",
-        "print(\"RANDOM:\", astar(SETS, RANDOM_heuristic))\n",
-        "print(\n",
-        "    \"COSTONLY:\", astar(SETS, COSTONLY_heuristic)\n",
-        ")  # cost only seems to be consistently achieving the same result as MRE+MC\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ea8ILOQJvWZr"
-      },
-      "source": [
-        "#### Comments\n",
-        "\n",
-        "- MRE consistently takes a lot of step, seems to make sense has it gives more priority to sets who cover a lot of already covered spaces\n",
-        "\n",
-        "- MC consistently behaves the best\n",
-        "\n",
-        "- MRE + MC behaves a bit worse than MC but a lot better than MRE\n",
-        "\n",
-        "- RANDOM seems to perform on par with MRE + MC\n",
-        "\n",
-        "- COSTONLY behaves exactly like MRE + MC, maybe because both are trying to maximize the coverage of elements (by minimizing the number of uncovered elements) and the cost function itself already captures the essence of minimizing the number of selected subsets.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7G4VcV_XvWZs"
-      },
-      "source": [
-        "# AVG Steps\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
         },
-        "id": "CraiNkyivWZs",
-        "outputId": "84203fb7-2683-4bee-e18f-2f0eeda57bd7"
-      },
-      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "244948it [02:38, 1544.18it/s]\n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Problem size: 5 - Number of sets: 10\n",
-            "Run 1 completed\n",
-            "Run 2 completed\n",
-            "Run 3 completed\n",
-            "Run 4 completed\n",
-            "Run 5 completed\n",
-            "Run 6 completed\n",
-            "Run 7 completed\n",
-            "Run 8 not solvable\n",
-            "Run 9 completed\n",
-            "Run 10 completed\n",
-            "Run 11 not solvable\n",
-            "Run 12 completed\n",
-            "Run 13 completed\n",
-            "Run 14 completed\n",
-            "Run 15 completed\n",
-            "Run 16 completed\n",
-            "Run 17 completed\n",
-            "Run 18 not solvable\n",
-            "Run 19 completed\n",
-            "Run 20 completed\n",
-            "Average number of steps over 20 runs:\n",
-            "MRE: 2599.59\n",
-            "MC: 3.47\n",
-            "MRE+MC: 84.41\n",
-            "RANDOM: 79.06\n",
-            "COSTONLY: 84.41\n"
+            " Solution: [1, 2, 6] \n",
+            " Cost: 3\n",
+            "\n",
+            "MC\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "48it [00:00, 184.69it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Solution: [1, 2, 6] \n",
+            " Cost: 3\n",
+            "\n",
+            "MRE+MC\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "7482it [00:34, 214.43it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Solution: [1, 2, 6] \n",
+            " Cost: 3\n",
+            "\n",
+            "RANDOM\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "437it [00:00, 5257.56it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Solution: [12, 4, 1] \n",
+            " Cost: 3\n",
+            "\n",
+            "ALLorNONE\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "176420it [04:06, 714.96it/s]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Solution: [1, 2, 6] \n",
+            " Cost: 3\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
           ]
         }
       ],
       "source": [
-        "steps_MRE = []\n",
-        "steps_MC = []\n",
-        "steps_MRE_MC = []\n",
-        "steps_RANDOM = []\n",
-        "steps_COSTONLY = []\n",
+        "if NUMBER_SET <= 10:\n",
+        "    for i in range(NUMBER_SET):\n",
+        "        print(\"Set\", i, SETS[i], \"Coverage:\", np.sum(SETS[i]))\n",
         "\n",
-        "N_RUNS = 20\n",
-        "\n",
-        "PROBLEM_SIZE = 5  # dimension of the finite set U\n",
-        "NUMBER_SET = 10  # number of subsets in the collection S\n",
-        "\n",
-        "print(f\"Problem size: {PROBLEM_SIZE} - Number of sets: {NUMBER_SET}\")\n",
-        "\n",
-        "for _ in range(N_RUNS):\n",
-        "    sets = tuple(\n",
-        "        np.array([random() < 0.3 for i in range(PROBLEM_SIZE)])\n",
-        "        for j in range(NUMBER_SET)\n",
-        "    )\n",
-        "\n",
-        "    if goal_check(State(range(NUMBER_SET), 0, 0), sets):\n",
-        "        steps_MRE.append(astar(sets, MRE_heuristic)[1])\n",
-        "        steps_MC.append(astar(sets, MC_heuristic)[1])\n",
-        "        steps_MRE_MC.append(astar(sets, MRE_MC_heuristic)[1])\n",
-        "        steps_RANDOM.append(astar(sets, RANDOM_heuristic)[1])\n",
-        "        steps_COSTONLY.append(astar(sets, COSTONLY_heuristic)[1])\n",
-        "        print(f\"Run {_+1} completed\")\n",
-        "    else:\n",
-        "        print(f\"Run {_+1} not solvable\")\n",
-        "\n",
-        "\n",
-        "print(f\"Average number of steps over {N_RUNS} runs:\")\n",
-        "print(f\"MRE: {sum(steps_MRE)/len(steps_MRE):.2f}\")\n",
-        "print(f\"MC: {sum(steps_MC)/len(steps_MC):.2f}\")\n",
-        "print(f\"MRE+MC: {sum(steps_MRE_MC)/len(steps_MRE_MC):.2f}\")\n",
-        "print(f\"RANDOM: {sum(steps_RANDOM)/len(steps_RANDOM):.2f}\")\n",
-        "print(f\"COSTONLY: {sum(steps_COSTONLY)/len(steps_COSTONLY):.2f}\")\n"
+        "print()\n",
+        "print(\"MRE\")\n",
+        "taken, states = astar(SETS, MRE_heuristic)\n",
+        "print(\n",
+        "    \" Solution:\",\n",
+        "    taken,\n",
+        "    \"\\n Cost:\",\n",
+        "    len(taken),\n",
+        ")\n",
+        "print()\n",
+        "print(\"MC\")\n",
+        "taken, states = astar(SETS, MC_heuristic)\n",
+        "print(\n",
+        "    \" Solution:\",\n",
+        "    taken,\n",
+        "    \"\\n Cost:\",\n",
+        "    len(taken),\n",
+        ")\n",
+        "print()\n",
+        "print(\"MRE+MC\")\n",
+        "taken, states = astar(SETS, MRE_MC_heuristic)\n",
+        "print(\n",
+        "    \" Solution:\",\n",
+        "    taken,\n",
+        "    \"\\n Cost:\",\n",
+        "    len(taken),\n",
+        ")\n",
+        "print()\n",
+        "print(\"RANDOM\")\n",
+        "taken, states = astar(SETS, RANDOM_heuristic)\n",
+        "print(\n",
+        "    \" Solution:\",\n",
+        "    taken,\n",
+        "    \"\\n Cost:\",\n",
+        "    len(taken),\n",
+        ")\n",
+        "print()\n",
+        "print(\"ALLorNONE\")\n",
+        "taken, states = astar(SETS, ALLorNONE_heuristic)\n",
+        "print(\n",
+        "    \" Solution:\",\n",
+        "    taken,\n",
+        "    \"\\n Cost:\",\n",
+        "    len(taken),\n",
+        ")\n"
       ]
     }
   ],
