--- a/lab1_set_covering_a_start/lab1.ipynb
+++ b/lab1_set_covering_a_start/lab1.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 1,
       "metadata": {
         "id": "sCCwbjuwvWZd"
       },
@@ -18,19 +18,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Problem Definition:"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 2,
       "metadata": {
         "id": "HrD3qip0vWZg"
       },
       "outputs": [],
       "source": [
         "# constants\n",
-        "PROBLEM_SIZE = 5  # dimension of the finite set U\n",
-        "NUMBER_SET = 20  # number of subsets in the collection S\n",
+        "PROBLEM_SIZE = 20  # dimension of the finite set U to cover\n",
+        "NUMBER_SET = 40  # number of randomized subsets to chose from\n",
         "SETS = tuple(\n",
         "    np.array([random() < 0.3 for i in range(PROBLEM_SIZE)]) for j in range(NUMBER_SET)\n",
-        ")  # generate sets in S\n",
+        ")  # generate radnomized sets\n",
         "\n",
         "# Define State as a named tuple\n",
         "State = namedtuple(\"State\", [\"taken\", \"cost\", \"heuristic\"])\n"
@@ -38,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 3,
       "metadata": {
         "id": "4MiWodfNvWZh"
       },
@@ -60,41 +67,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Cost and Heuristic Functions:"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 4,
       "metadata": {
         "id": "rkXFnwICvWZj"
       },
       "outputs": [],
       "source": [
         "def cost(state):\n",
-        "    \"\"\"The cost function calculates the cost of reaching a particular state\"\"\"\n",
+        "    \"\"\"the cost is the number of sets taken by the solution\"\"\"\n",
         "    return len(state.taken)"
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gt8hk1qBvWZk"
-      },
-      "source": [
-        "#### Commonly used Heuristic for set covering:\n",
-        "\n",
-        "- **Minimum Remaining Elements (MRE)**: This heuristic estimates the number of elements that are not yet covered by any selected subset. It encourages selecting subsets that cover the fewest remaining uncovered elements, which is consistent with minimizing the actual cost. Therefore, it is admissible.\n",
-        "\n",
-        "- **Maximum Coverage (MC)**:  This heuristic estimates the number of currently uncovered elements and prioritizes selecting subsets that contribute to covering the largest number of these elements. It also encourages minimizing the actual cost, making it admissible. *The Greedy Heuristic is essentially the same as the MC. Both heuristics prioritize selecting subsets that cover the largest number of currently uncovered elements.*\n",
-        "\n",
-        "- **Combination of MRE and MC**:  A combination of admissible heuristics remains admissible. If both MRE and MC individually are admissible, their combination (e.g., taking the average) is still admissible.\n",
-        "\n",
-        "- **Randomized Heuristics**: A random heuristic does not guarantee admissibility. It may overestimate or underestimate the true cost. *It is not guaranteed to be admissible*, but its fun.\n",
-        "\n",
-        "- **All or None Heuristic**: This heuristic checks first for notable sets (ones that cover all or none of the remaining elements) and assigns them corresponding priority. If no such sets exist, it uses the MRE heuristic. This heuristic is admissible.\n",
-        " "
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 5,
       "metadata": {
         "id": "GnsoumyPvWZm"
       },
@@ -117,81 +111,115 @@
         "#\n",
         "\n",
         "\n",
-        "def MRE_heuristic(state, sets):\n",
-        "    # Calculate the uncovered elements by taking the logical OR of selected subsets\n",
+        "def TRIVIAL_heuristic(state, sets):\n",
+        "    return 0\n",
+        "\n",
+        "\n",
+        "def MRSC_heuristic(state, sets):\n",
+        "    \"\"\"\n",
+        "    Minimum Remaining Set Coverage\n",
+        "\n",
+        "    This heuristic estimates the cost based on how many elements in \"U\" are still\n",
+        "    uncovered and divides it by the number of subsets not taken. This heuristic\n",
+        "    assumes that the subsets have an equal chance of covering remaining uncovered\n",
+        "    elements.\n",
+        "\n",
+        "    h(state) = (number of uncovered elements in \"U\") / (number of subsets not taken)\n",
+        "    \"\"\"\n",
+        "\n",
         "    uncovered = reduce(\n",
         "        np.logical_or, [sets[i] for i in state.taken], np.zeros(len(sets[0]))\n",
         "    )\n",
         "\n",
-        "    # Estimate the remaining cost by counting the number of uncovered elements\n",
-        "    heuristic = -np.sum(np.logical_not(uncovered))\n",
+        "    not_taken_subsets = NUMBER_SET - len(state.taken)\n",
         "\n",
-        "    return heuristic\n",
+        "    return -np.sum(uncovered) / not_taken_subsets\n",
         "\n",
         "\n",
-        "def MC_heuristic(state, sets):\n",
-        "    # Calculate the uncovered elements by taking the logical OR of selected subsets\n",
+        "def MSC_heuristic(state, sets):\n",
+        "    \"\"\"\n",
+        "    Maximum Subset Coverage\n",
+        "\n",
+        "    This heuristic estimates the cost by assuming that each additional subset chosen\n",
+        "    will cover as many uncovered elements as possible. It divides the number of\n",
+        "    uncovered elements in \"U\" by the number of subsets already taken.\n",
+        "\n",
+        "    h(state) = (number of uncovered elements in \"U\") / (number of subsets already taken)\n",
+        "    \"\"\"\n",
+        "\n",
         "    uncovered = reduce(\n",
         "        np.logical_or, [sets[i] for i in state.taken], np.zeros(len(sets[0]))\n",
         "    )\n",
         "\n",
-        "    # Sort the subsets by how many uncovered elements they cover (in descending order)\n",
-        "    subsets_by_coverage = sorted(\n",
-        "        range(len(sets)), key=lambda i: -np.sum(sets[i] & np.logical_not(uncovered))\n",
+        "    return (-np.sum(uncovered) / len(state.taken)) if len(state.taken) > 0 else 0\n",
+        "\n",
+        "\n",
+        "def MRSC_MSC_heuristic(state, sets):\n",
+        "    return (MRSC_heuristic(state, sets) + MSC_heuristic(state, sets)) / 2\n",
+        "\n",
+        "\n",
+        "def ASC_heuristic(state, sets):\n",
+        "    \"\"\"\n",
+        "    Average Subset Coverage\n",
+        "\n",
+        "    This heuristic estimates the cost based on the average size of the remaining\n",
+        "    subsets and assumes that each chosen subset will, on average, cover this many\n",
+        "    elements.\n",
+        "\n",
+        "    h(state) = (number of uncovered elements in \"U\") / (average size of remaining subsets)\n",
+        "    \"\"\"\n",
+        "\n",
+        "    uncovered = reduce(\n",
+        "        np.logical_or, [sets[i] for i in state.taken], np.zeros(len(sets[0]))\n",
         "    )\n",
         "\n",
-        "    # Initialize the heuristic value\n",
-        "    heuristic = 0\n",
-        "    covered_elements = np.copy(uncovered)\n",
+        "    remaining_sets = [sets[i] for i in range(NUMBER_SET) if i not in state.taken]\n",
         "\n",
-        "    # Iterate through subsets sorted by coverage and count their contribution\n",
-        "    for subset_index in subsets_by_coverage:\n",
-        "        subset = sets[subset_index]\n",
-        "        contribution = subset & np.logical_not(covered_elements)\n",
-        "        heuristic += 1  # Increment the cost\n",
-        "        covered_elements = np.logical_or(covered_elements, contribution)\n",
+        "    average_size = np.sum([np.sum(s) for s in remaining_sets]) / len(remaining_sets)\n",
         "\n",
-        "        if np.all(covered_elements):\n",
-        "            break  # All elements are covered\n",
-        "\n",
-        "    return heuristic\n",
-        "\n",
-        "\n",
-        "def MRE_MC_heuristic(state, sets):\n",
-        "    return (MRE_heuristic(state, sets) + MC_heuristic(state, sets)) / 2\n",
+        "    return -np.sum(uncovered) / average_size\n",
         "\n",
         "\n",
         "def RANDOM_heuristic(state, sets):\n",
+        "    \"\"\"\n",
+        "    !! not admissible but funny !!\n",
+        "    \"\"\"\n",
         "    return random()\n",
         "\n",
         "\n",
-        "def ALLorNONE_heuristic(state, sets):\n",
-        "    # Calculate the uncovered elements by taking the logical OR of selected subsets\n",
-        "    uncovered = reduce(np.logical_or, [sets[i] for i in state.taken], np.zeros(len(sets[0])))\n",
+        "def DENSITY_heuristic(state, sets):\n",
+        "    \"\"\"\n",
+        "    Density Heuristic\n",
         "\n",
-        "    # Check if there exist a set with all true \n",
-        "    all_true_covered = np.any(np.all(np.logical_and(sets, np.logical_not(uncovered)), axis=1))\n",
+        "    This heuristic estimates the cost based on the density of uncovered elements in\n",
+        "    \"U\". It assumes that the subsets have an equal chance of covering remaining\n",
+        "    uncovered elements.\n",
         "\n",
-        "    # Check if there exist a set with all false\n",
-        "    all_false_covered = np.any(np.all(np.logical_and(np.logical_not(sets), np.logical_not(uncovered)), axis=1))\n",
+        "    h(state) = (density of uncovered elements in \"U\") * (number of subsets)\n",
+        "    \"\"\"\n",
         "\n",
+        "    uncovered = reduce(\n",
+        "        np.logical_or, [sets[i] for i in state.taken], np.zeros(len(sets[0]))\n",
+        "    )\n",
         "\n",
-        "    # Determine the heuristic value based on the conditions\n",
-        "    if all_true_covered:\n",
-        "        heuristic = 0  # Highest priority (goal state already reached)\n",
-        "    elif all_false_covered:\n",
-        "        heuristic = float('inf')  # Lowest priority (impossible to reach the goal state)\n",
-        "    else:\n",
-        "        # Calculate the remaining cost as in the MRE heuristic\n",
-        "        heuristic = -np.sum(np.logical_not(uncovered))\n",
+        "    # Calculate the density of uncovered elements in \"U\"\n",
+        "    uncovered_density = np.sum(uncovered) / len(uncovered)\n",
         "\n",
-        "    return heuristic\n",
+        "    # Estimate the remaining cost based on the uncovered density\n",
+        "    return -uncovered_density * NUMBER_SET\n",
         "\n"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# A*"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 6,
       "metadata": {
         "id": "_34iHwB3vWZo"
       },
@@ -210,22 +238,18 @@
         "    # Initialize the closed set as an empty set\n",
         "    closed_set = set()\n",
         "\n",
-        "    checked_states = 0\n",
-        "\n",
         "    progress_bar = tqdm(total=None)\n",
         "\n",
         "    while not open_set.empty():\n",
         "        # Get the state with the lowest f score from the priority queue\n",
         "        _, current_state = open_set.get()\n",
         "\n",
-        "        checked_states += 1\n",
-        "\n",
         "        progress_bar.update(1)\n",
         "\n",
         "        # If the current state is a goal state, return the solution\n",
         "        if goal_check(current_state, sets):\n",
         "            progress_bar.close()\n",
-        "            return current_state.taken, checked_states\n",
+        "            return current_state\n",
         "\n",
         "        # Add the current state to the closed set\n",
         "        closed_set.add(tuple(current_state.taken))\n",
@@ -249,8 +273,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Results:"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -263,91 +294,128 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "Problem size: 20 Number of sets: 40 \n",
             "\n",
-            "MRE\n"
+            "\n",
+            "TRIVIAL_heuristic\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "244948it [02:38, 1544.18it/s]\n"
+            "72671it [00:27, 2678.82it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            " Solution: [1, 2, 6] \n",
-            " Cost: 3\n",
+            " Solution: [0, 9, 16, 26]\n",
+            " Solution check: True\n",
             "\n",
-            "MC\n"
+            "MRSC_heuristic\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "48it [00:00, 184.69it/s]\n"
+            "60882it [00:58, 1043.72it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            " Solution: [1, 2, 6] \n",
-            " Cost: 3\n",
+            " Solution: [0, 9, 16, 26]\n",
+            " Solution check: True\n",
             "\n",
-            "MRE+MC\n"
+            "MSC_heuristic\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "7482it [00:34, 214.43it/s]\n"
+            "33285it [00:36, 907.66it/s] \n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            " Solution: [1, 2, 6] \n",
-            " Cost: 3\n",
+            " Solution: [0, 9, 16, 26]\n",
+            " Solution check: True\n",
             "\n",
-            "RANDOM\n"
+            "MRSC_MSC_heuristic\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "437it [00:00, 5257.56it/s]\n"
+            "57120it [01:28, 648.13it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            " Solution: [12, 4, 1] \n",
-            " Cost: 3\n",
+            " Solution: [0, 9, 16, 26]\n",
+            " Solution check: True\n",
             "\n",
-            "ALLorNONE\n"
+            "ASC_heuristic\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "176420it [04:06, 714.96it/s]"
+            "6231it [00:46, 133.17it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            " Solution: [1, 2, 6] \n",
-            " Cost: 3\n"
+            " Solution: [17, 18, 20, 39]\n",
+            " Solution check: True\n",
+            "\n",
+            "DENSITY_heuristic\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "5it [00:00, 714.90it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Solution: [39, 17, 4, 20]\n",
+            " Solution check: True\n",
+            "\n",
+            "RANDOM_heuristic\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "61097it [00:22, 2758.29it/s]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Solution: [20, 13, 16, 18]\n",
+            " Solution check: True\n",
+            "\n"
           ]
         },
         {
@@ -359,55 +427,25 @@
         }
       ],
       "source": [
-        "if NUMBER_SET <= 10:\n",
-        "    for i in range(NUMBER_SET):\n",
-        "        print(\"Set\", i, SETS[i], \"Coverage:\", np.sum(SETS[i]))\n",
-        "\n",
-        "print()\n",
-        "print(\"MRE\")\n",
-        "taken, states = astar(SETS, MRE_heuristic)\n",
-        "print(\n",
-        "    \" Solution:\",\n",
-        "    taken,\n",
-        "    \"\\n Cost:\",\n",
-        "    len(taken),\n",
-        ")\n",
-        "print()\n",
-        "print(\"MC\")\n",
-        "taken, states = astar(SETS, MC_heuristic)\n",
-        "print(\n",
-        "    \" Solution:\",\n",
-        "    taken,\n",
-        "    \"\\n Cost:\",\n",
-        "    len(taken),\n",
-        ")\n",
-        "print()\n",
-        "print(\"MRE+MC\")\n",
-        "taken, states = astar(SETS, MRE_MC_heuristic)\n",
-        "print(\n",
-        "    \" Solution:\",\n",
-        "    taken,\n",
-        "    \"\\n Cost:\",\n",
-        "    len(taken),\n",
-        ")\n",
-        "print()\n",
-        "print(\"RANDOM\")\n",
-        "taken, states = astar(SETS, RANDOM_heuristic)\n",
-        "print(\n",
-        "    \" Solution:\",\n",
-        "    taken,\n",
-        "    \"\\n Cost:\",\n",
-        "    len(taken),\n",
-        ")\n",
-        "print()\n",
-        "print(\"ALLorNONE\")\n",
-        "taken, states = astar(SETS, ALLorNONE_heuristic)\n",
-        "print(\n",
-        "    \" Solution:\",\n",
-        "    taken,\n",
-        "    \"\\n Cost:\",\n",
-        "    len(taken),\n",
-        ")\n"
+        "heuristics = [\n",
+        "    TRIVIAL_heuristic,\n",
+        "    MRSC_heuristic,\n",
+        "    MSC_heuristic,\n",
+        "    MRSC_MSC_heuristic,\n",
+        "    ASC_heuristic,\n",
+        "    DENSITY_heuristic,\n",
+        "    RANDOM_heuristic,\n",
+        "]\n",
+        "print(\"Problem size:\", PROBLEM_SIZE, \"Number of sets:\", NUMBER_SET, \"\\n\")\n",
+        "for i in heuristics:\n",
+        "    print(i.__name__)\n",
+        "    solution = astar(SETS, i)\n",
+        "    print(\" Solution:\", solution.taken)\n",
+        "    if PROBLEM_SIZE <= 10:\n",
+        "        for i in solution.taken:\n",
+        "            print(\" Set\", i, SETS[i], \"Coverage:\", np.sum(SETS[i]))\n",
+        "    print(\" Solution check:\", goal_check(solution, SETS))\n",
+        "    print()\n"
       ]
     }
   ],
